Fixed tooltips on side nodes getting clipped

--- a/src/components/common/features.css
+++ b/src/components/common/features.css
@@ -17,6 +17,7 @@
 .can:hover button {
     transform: scale(1.15, 1.15);
     box-shadow: 0 0 20px var(--points);
+    z-index: 1;
 }
 
 .locked,
